--- a/Notes/Week1/week1.tex
+++ b/Notes/Week1/week1.tex
@@ -797,7 +797,8 @@
         \item Thus, since $\sigma\prb{u}\dd{t}$ represents a small volume within the overall volume the gas occupies, the expected number of collisions $\dd{N_\text{coll}}$ would be equal to the number of molecules expected to lie in the volume $\sigma\prb{u}\dd{t}$.
         \item If the $N$ molecules can be expected to be evenly distributed throughout the volume $V$ with number density $\rho=N/V$, then we have that
         \begin{equation*}
-            \dd{N_\text{coll}} = \rho\sigma\prb{u}\dd{t}
+            \dd{N_\text{coll}} = N\cdot\frac{\sigma\prb{u}\dd{t}}{V}
+            = \rho\sigma\prb{u}\dd{t}
         \end{equation*}
         \item We must now undo the one assumption that cannot stay: That all other molecules are stationary.
         \item To do this, we treat the motion of the two bodies by the reduced mass.
