--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -259,7 +259,7 @@
         \end{equation*}
         \item Integrating yields
         \begin{equation*}
-            \Delta[\ce{B}]_0 = [\ce{B}]_{1,\text{eq}}-[\ce{B}]_{2,\text{eq}}
+            \Delta[\ce{B}] = [\ce{B}]_{1,\text{eq}}-[\ce{B}]_{2,\text{eq}}
             = \Delta[\ce{B}]_0\e[-t/\tau]
         \end{equation*}
         where $\tau$ is the \textbf{relaxation time}.
