--- a/preamble.tex
+++ b/preamble.tex
@@ -11,7 +11,7 @@
 \usepackage{booktabs}
 \usepackage{xparse}
 \usepackage{subcaption,float}
-\usepackage{tikz}
+\usepackage{tikz,graphicx}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{bm,physics,mathtools,empheq}
 \usepackage{mhchem}
@@ -47,7 +47,7 @@
 \addbibresource{../main.bib}
 \DefineBibliographyStrings{english}{bibliography={References}}
 
-\usetikzlibrary{backgrounds,decorations.markings,decorations.text,fpu,intersections,calc}
+\usetikzlibrary{backgrounds,decorations.markings,decorations.text,fpu,intersections,calc,angles}
 \colorlet{blx}{blue!90!green!80}
 \colorlet{bly}{blue!90!green!60}
 \colorlet{blz}{blue!90!green!40}
