--- a/Notes/Week6/week6.tex
+++ b/Notes/Week6/week6.tex
@@ -56,10 +56,12 @@
             ;
             \draw [very thin,<->,shorten <=1pt,shorten >=1pt] (-4.8,0) -- node[fill=white,inner sep=1.5pt]{$b$} ++(0,1.3);
     
-            \filldraw [fill=orx,thick] (-3,1.3) circle (7mm) node[above=7mm]{A};
+            \begin{scope}[on background layer]
+                \filldraw [fill=orx,thick] (-3,1.3) circle (7mm) node[above=7mm]{A};
+                \filldraw [fill=gry,thick] (2,0) circle (1cm) node[below=1cm]{B};
+            \end{scope}
+
             \draw [very thick,-latex] (-2.3,1.3) -- ++(1.02,0) node[right,fill=white]{$\mathbf{u}_{\ce{A}}$};
-    
-            \filldraw [fill=gry,thick] (2,0) circle (1cm) node[below=1cm]{B};
             \draw [very thick,-latex] (1,0) -- ++(-1,0) node[left,fill=white]{$\mathbf{u}_{\ce{B}}$};
     
             \draw (-3,1.3) ++(-135:0.7) -- node[below right=-2pt]{$r_{\ce{A}}$} ++(45:0.7) -- node[pos=0.55,above,sloped]{Line of centers} (2,0) -- node[below right=-2pt]{$r_{\ce{B}}$} ++(45:1);
@@ -68,7 +70,7 @@
         \label{fig:lineOfCenters}
     \end{figure}
     \begin{itemize}
-        \item If we denote the relative kinetic energy along the line of centers by $E_{loc}$, then we are assuming that a reaction occurs when $E_{loc}>0$.
+        \item If we denote the relative kinetic energy along the line of centers by $E_\text{loc}$, then we are assuming that a reaction occurs when $E_\text{loc}>E_0$.
         \item The main thrust of this model is that we are redefining $E_r$ instead of $\sigma_r(E_r)$ overall.
     \end{itemize}
     \item The line-of-centers model asserts that two molecules will collide only if the \textbf{impact parameter} is less than the sum of the radii of the colliding molecules.
@@ -78,7 +80,7 @@
             \sigma_r(E_r) =
             \begin{cases}
                 0 & E_r<E_0\\
-                \pi d_{\ce{A}\ce{B}}^2\left( 1-\frac{E_0}{E_r} \right)
+                \pi d_{\ce{A}\ce{B}}^2\left( 1-\frac{E_0}{E_r} \right) & E_r\geq E_0
             \end{cases}
         \end{equation*}
         \item It follows from math similar to the above that
@@ -455,10 +457,10 @@
             \draw [<->,shorten <=1pt,shorten >=1pt] (1.9,0) -- node[fill=white]{\SI{-140}{\kilo\joule\per\mole}} ++(0,-4.7);
             \draw [<->,shorten <=1pt,shorten >=1pt] (1.1,0) -- node[left]{$\frac{1}{2}h\nu_{\ce{D2}}$} ++(0,0.5);
             %
-            \draw [<->,shorten <=1pt,shorten >=1pt] (4.9,-4.2) -- node[left]{$h\nu_{\ce{D2}}$} ++(0,1);
-            \draw [<->,shorten <=1pt,shorten >=1pt] (4.9,-4.7) -- node[left]{$\frac{1}{2}h\nu_{\ce{D2}}$} ++(0,0.5);
+            \draw [<->,shorten <=1pt,shorten >=1pt] (4.9,-4.2) -- node[left]{$h\nu_{\ce{DF}}$} ++(0,1);
+            \draw [<->,shorten <=1pt,shorten >=1pt] (4.9,-4.7) -- node[left]{$\frac{1}{2}h\nu_{\ce{DF}}$} ++(0,0.5);
         \end{tikzpicture}
-        \caption{Energy diagram for the \ce{F + D2} reaction.}
+        \caption{Energy diagram for \ce{F + D2}.}
         \label{fig:FD2}
     \end{figure}
     \begin{itemize}
